--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -2,4 +2,42 @@
 
 /* 回答はここに書いてね */
 
+
+
+.text-align-box {
+  text-align: center;
+  width: 100%;
+}
+
+
+.ptext {
+  background-color: #e6f2ff;
+  width: 90px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px; 
+  
+}
+
+.pmargin {
+  background-color: #e6f2ff;
+  width: 90px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px; 
+  margin: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 回答はここに書いてね */
