--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -5,17 +5,19 @@
 
 
 .text-align-box {
-  text-align: center;
-  width: 100%;
+ text-align: center;
+
 }
 
 
 .ptext {
+  display: inline-block;
+  text-align: center;
   background-color: #e6f2ff;
   width: 90px;
-  text-align: center;
   padding-top: 10px;
   padding-bottom: 10px; 
+  
   
 }
 
