レイアウトパーツ完了

--- a/layout_parts/q10/css/style.css
+++ b/layout_parts/q10/css/style.css
@@ -2,4 +2,44 @@
 
 /* 回答はここに書いてね */
 
+.hukidasi {
+  position: relative;
+  width: 500px;
+  padding: 20px;
+  margin: 0 auto;
+  border: 5px solid #222;
+  border-radius: 30px;
+}
+
+
+
+.hukidasi::before {
+  content: "";
+  position: absolute;
+  bottom: -45px;
+  left: 30px;
+  border: 20px solid transparent;
+  border-top: 20px solid #222;
+
+}
+
+
+.hukidasi::after {
+  content: "";
+  position: absolute;
+  bottom: -38px;
+  left: 30px;
+  border: 20px solid transparent;
+  border-top: 20px solid #FFF;
+}
+
+
+
+
+
+
+
+
+
+
 /* 回答はここに書いてね */
