--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -2,4 +2,44 @@
 
 /* 回答はここに書いてね */
 
+
+
+
+
+.q1__content__box {
+  background-color: #3274ae;
+  width: 230px;
+  float: left;
+  padding: 20px;
+  margin-left: 20px;
+}
+
+.q1__content {
+  width: 900px;
+  background-color: #eff3f4;
+  margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+
+.q1__content__text {
+  font-size: 16px;
+  line-height: 16px; 
+  background-color: #eaf4ff;
+  border: 10px solid #022336;
+  padding: 20px;
+}
+
+
+
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+.q1__content .q1__content__box:first-child {
+   margin-left: 0;
+
+
 /* 回答はここに書いてね */
