--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -2,4 +2,64 @@
 
 /* 回答はここに書いてね */
 
+
+
+.q2__content__text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+  
+}
+
+
+.left {
+  float: left;
+  margin-bottom: 10px;
+  margin-right: 20px;
+ 
+}
+
+.right {
+  float: right;
+  margin-bottom: 10px;
+  margin-left: 20px;
+ 
+}
+
+
+
+.q2 {
+  padding: 20px;
+  background-color: #eff3f4;
+  width: 900px;
+  margin: 0 auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 回答はここに書いてね */
