--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -56,12 +56,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-
 }
-
-
-
 
 .text-flex {
   background-color: #fff;
@@ -70,12 +65,47 @@
 
 }
 
-
-
 .text-flex-box {
   display: flex;
 
 }
+
+
+
+.q6__box.is-stable {
+  position: relative;
+}
+
+
+.q6__box__inner.position-box {
+  margin: auto;
+  position:absolute;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+}
+
+
+.q6__box.is-flexible.transform-parent {
+  position: relative;
+}
+
+
+.q6__box__inner.transform-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  -webkit-transform: translateY(-50%) translateX(-50%);
+}
+
+
+
+
+
+
+
 
 
 
