--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -1,5 +1,88 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.gazou {
+  position: relative;
+  margin: auto;
+  width:500px;
+  height:333px;
+  overflow: hidden;
+}
+
+.gazou_jpg {
+transition: all 0.5s ;
+}
+
+.text_parent {
+  position: absolute;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .8));
+  bottom: -100%;
+  transition:		all 0.5s ease;
+  width: 100%;
+  height: 100%;
+  left:0 ;
+}
+
+.text {
+  position: absolute;
+  font-size: 16px;
+  line-height: 16px;
+  color:#fff; 
+  box-sizing: border-box;
+  width:100%;
+	bottom:0;
+  word-break: break-all;
+  padding: 20px;
+}
+
+
+.gazou:hover .gazou_jpg {
+  transform:scale(1.5);
+}
+
+.gazou:hover .text_parent {
+  bottom:0 ;
+}
+
+
+
+
+
+
+.anime {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 10px solid #ECF1F2;
+  border-top-color: #00BCD4;
+  border-radius: 50%;
+  animation: anime 1.1s infinite linear;
+}
+
+@keyframes anime{
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* 回答はここに書いてね */
