レビュー後の直しです。主に改行とクラス名です。

--- a/layout_parts/q10/css/style.css
+++ b/layout_parts/q10/css/style.css
@@ -2,7 +2,7 @@
 
 /* 回答はここに書いてね */
 
-.hukidasi {
+.balloon {
   position: relative;
   width: 500px;
   padding: 20px;
@@ -13,7 +13,7 @@
 
 
 
-.hukidasi::before {
+.balloon::before {
   content: "";
   position: absolute;
   bottom: -45px;
@@ -24,7 +24,7 @@
 }
 
 
-.hukidasi::after {
+.balloon::after {
   content: "";
   position: absolute;
   bottom: -38px;
