--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -10,8 +10,7 @@
   background-color: #ecf1f2;
 }
 
-
-.box- {
+.color-box {
   position: absolute;
   width: 100px;
   text-align: center;
@@ -20,69 +19,63 @@
   line-height: 100px;
 }
 
-
-
-.box-.iti {
+.color-box.one {
   background-color: #ffefd3;
   top:40px;
   left: 200px;
   z-index: 1;
 }
 
-
-
-
-.box-.ni {
+.color-box.two {
   background-color: #7084de;
   top:120px;
   left: 280px;
   z-index: 2;
 }
 
-.box-.san {
+.color-box.three {
   background-color: #d0ecea;
   top:200px;
   left: 360px;
   z-index: 3;
 }
 
-.box-.yon {
+.color-box.four {
   background-color: #8b7a5e;
   top:280px;
   left: 280px;
   z-index: 4;
 }
 
-.box-.go {
+.color-box.five {
   background-color: #9fd6d2;
   top:360px;
   left: 200px;
   z-index: 5;
 }
 
-.box-.roku {
+.color-box.six {
   background-color: #fffee4;
   top:280px;
   left: 120px;
   z-index: 6;
 }
 
-.box-.nana {
+.color-box.seven {
   background-color: #deae70;
   top:200px;
   left: 40px;
   z-index: 7;
 }
 
-.box-.hati {
- 
+.color-box.eight {
   background-color: #de70cf;
   top:120px;
   left: 120px;
   z-index: 8;
 }
 
-.box-.hati:after {
+.color-box.eight:after {
   position: absolute;
   background-color: #ffefd3;
   width: 20px;
@@ -92,26 +85,11 @@
   content: "";
 }
 
-
-.box-.kyu {
+.color-box.nine {
   background-color: #2b69a3;
   top:10px;
   left: 10px;
   position: fixed;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* 回答はここに書いてね */
