--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -2,80 +2,51 @@
 
 /* 回答はここに書いてね */
 
-
-
-
 .dtable {
   padding: 20px;
 }
 
-
-.table_x:first-child {
+.table-contents:first-child {
   margin-top: 0;
 }
 
-
-
-
-.table_x {
- 
+.table-contents {
   display: table;
   margin-top: 20px;
-  text-align: center;
   width: 100%;
 }
 
-.dtable_a {
+.table-contents .cell {
+  display: table-cell;
+  text-align: center;
+  padding: 20px;
+}
+
+.pink {
   width: 100px;
   background-color: #fdc8b8;
-  display: table-cell;
-  
- 
 }
 
-.dtable_b {
-  
+.parple {
   background-color: #e0abd9;
-  display: table-cell;
-  padding: 20px;
 }
 
-.dtable_c {
+.bulu {
   width: 100px;
   background-color: #b6d8ed;
-  display: table-cell;
-  padding: 20px;
 }
 
-
-
-
-
-.dtable_d {
-  
+.yelow {
   background-color: #e5d32e;
-  display: table-cell;
-  padding: 20px;
-
 }
 
-.dtable_e {
-  
+.red {  
   background-color: #ec8f9a;
-  display: table-cell;
-  padding: 20px;
 }
 
-.dtable_f {
+.green {
   width: 500px;
   background-color: #8fdcad;
-  display: table-cell;
-  padding: 20px;
-
 }
-
-
-
-
 
 /* 回答はここに書いてね */
